# osmo-sdr

./: .gitignore
firmware/: README
firmware-old/include/: fast_source.h  fast_source_descr.h  osdr_ssc.h  reg_field.h  req_ctx.h  tuner_e4k.h  uart_cmd.h
firmware-old/osmosdr-project/: main.c
firmware-old/src/: fast_source.c  reg_field.c  req_ctx.c  tuner_e4k_transport.c
firmware-old/usb-dfu-project/: hardware.h  main.c  opcode.h  slimpro.c  usb_strings.txt
firmware-old/usb-fast-audio-source/: fast_source.h
firmware-old/utils/: usbstring.c
firmware/include/: common.h  fast_source.h  logging.h  osdr_fpga.h  osdr_ssc.h  req_ctx.h  si570.h  tuner_e4k.h  uart_cmd.h
firmware/osmosdr-dfuapp/: Makefile
firmware/osmosdr-dfuapp/src/: board.h  main.c  startup.c  vectors.c  vectors.h
firmware/osmosdr-dfuapp/src/at91sam3u4/: core_cm3.h  flash.lds
firmware/osmosdr-dfuapp/src/crt/: printf.c  sprintf.c  stdio.c  types.h  vprintf.c
firmware/osmosdr-dfuapp/src/driver/: dbgio.c  flash.c  flash.h  led.c  led.h  sys.c  sys.h  usbdhs.c  usbdhs.h
firmware/osmosdr-dfuapp/src/usb/: descriptors.h  hardware.c  hardware.h  slimpro.c  usb.c  usbdevice.c  usbdevice.h
firmware/osmosdr-project/: Makefile  main.c
firmware/osmosdr-radioapp/: LICENSE  Makefile
firmware/osmosdr-radioapp/src/: board.h  cmd_e4k.c  cmd_e4k.h  cmd_fpga.c  cmd_fpga.h  cmd_si570.c  cmd_si570.h  cmd_sys.c  cmd_sys.h  components.c  components.h  console.c  console.h  main.c  startup.c  vectors.c  vectors.h
firmware/osmosdr-radioapp/src/at91sam3u4/: AT91SAM3U4.h  flash.lds
firmware/osmosdr-radioapp/src/crt/: ctype.c  ctype.h  stdio.h  string.c  string.h  strtox.c  vsprintf.c
firmware/osmosdr-radioapp/src/driver/: chanfilter.c  chanfilter.h  dbgio.c  dbgio.h  dma.c  dma.h  dmabuffer.c  dmabuffer.h  e4k.c  e4k.h  flash.c  flash.h  irq.c  irq.h  led.c  led.h  mci.c  mci.h  pio.c  pio.h  reg_field.h  sdrfpga.c  sdrfpga.h  sdrmci.c  sdrmci.h  sdrssc.c  sdrssc.h  si570.c  si570.h  spi.c  spi.h  ssc.c  ssc.h  sys.c  sys.h  twi.c  twi.h  usbdhs.c
firmware/osmosdr-radioapp/src/dsp/: arm_math.h
firmware/osmosdr-radioapp/src/usb/: descriptors.c  descriptors.h  usb.c  usb.h  usbdevice.c  usbdevice.h
firmware/sdr-test-project/: Makefile  main.c
firmware/src/: fast_source.c  fast_source_descr.c  logging.c  osdr_fpga.c  osdr_ssc.c  reg_field.c  req_ctx.c  si570.c  tuner_e4k.c  tuner_e4k_transport.c  uart_cmd.c
firmware/tests/: Makefile  cmd-test.c  tuner-test.c
firmware/usb-dfu-project/: Makefile  README  dfu_desc.h  main.c  sam3u_chipid_usbserial.c  usb_strings.h
firmware/usb-fast-audio-source/: AUDDFastSourceDescriptors.c  Makefile  README  fast_source.c  fast_source.h  main.c
fpga/hw-v2/: compilation.order  compile.cfg  stimulators.set  synthesis.order  usbrx_vhdl.adf  usbrx_vhdl.aws  usbrx_vhdl.wsp
fpga/hw-v2-mci/: Edfmap.ini  compilation.order  compile.cfg  library.cfg  projlib.cfg  stimulators.set  synthesis.order  usbrx_vhdl.adf
fpga/hw-v2-mci/deploy/: .gitattributes  usbrx.xcf  usbrx_algo.vme  usbrx_data.vme
fpga/hw-v2-mci/diamond/: .run_manager.ini  .setting.ini  reportview.xml  usbrx_vhdl.ldf  usbrx_vhdl.lpf
fpga/hw-v2-mci/src/mt_filter/: mt_fil_mac_slow.vhd  mt_fil_storage_slow.vhd  mt_filter.vhd  mt_fir_symmetric_slow.vhd
fpga/hw-v2-mci/src/mt_toolbox/: mt_toolbox.vhd
fpga/hw-v2-mci/src/sdio/: sdio_cmd.vhd  sdio_dat.vhd  sdio_top.vhd  sdio_txctrl.vhd  sdio_txfifo.vhd
fpga/hw-v2-mci/src/testbench/: tb_filter.vhd  tb_sdio.vhd  tb_sdio_stim.vhd  tb_usbrx.vhd
fpga/hw-v2-mci/src/usbrx/: usbrx.vhd
fpga/hw-v2-mci/src/usbrx/datapath/: usbrx_ad7357.vhd  usbrx_decimate.vhd  usbrx_offset.vhd  usbrx_sdio.vhd  usbrx_ssc.vhd
fpga/hw-v2-mci/src/usbrx/filter/: usbrx_halfband.vhd
fpga/hw-v2-mci/src/usbrx/toplevel/: usbrx_clkgen.vhd  usbrx_clkref.vhd  usbrx_regbank.vhd  usbrx_spi.vhd  usbrx_toplevel.vhd
fpga/hw-v2/deploy/: usbrx_data.vme  usbrx_fpga_regs.odt
fpga/hw-v2/diamond/: Strategy1.sty  usbrx_vhdl.ldf  usbrx_vhdl.lpf
fpga/hw-v2/src/mt_toolbox/: mt_clktools.vhd  mt_synctools.vhd  mt_toolbox.vhd
fpga/hw-v2/src/testbench/: tb_usbrx.vhd
fpga/hw-v2/src/usbrx/: usbrx.vhd
fpga/hw-v2/src/usbrx/datapath/: usbrx_ad7357.vhd  usbrx_decimate.vhd  usbrx_offset.vhd  (+1 more)
gr-osmo-sdr/: CMakeLists.txt
gr-osmo-sdr/apps/: osmosdr_source.grc  osmosdr_source.py
gr-osmo-sdr/cmake/Modules/: FindGnuradioAudio.cmake
gr-osmo-sdr/grc/: CMakeLists.txt  osmosdr_sink_c.xml  osmosdr_source_c.xml
gr-osmo-sdr/include/: CMakeLists.txt  osmosdr_control.h  osmosdr_sink_c.h  osmosdr_source_c.h
gr-osmo-sdr/lib/: CMakeLists.txt  osmosdr_control.cc  osmosdr_sink_c.cc  osmosdr_source_c.cc  qa_osmosdr_sink_c.cc  qa_osmosdr_source_c.cc
gr-osmo-sdr/python/: CMakeLists.txt  qa_osmosdr.py
gr-osmo-sdr/swig/: CMakeLists.txt  osmosdr_swig.i
software/libosmosdr/: CMakeLists.txt  Doxyfile.in  Makefile.am  README  configure.ac  libosmosdr.pc.in  osmosdr.rules
software/libosmosdr/include/: CMakeLists.txt  Makefile.am  osmosdr.h  osmosdr_export.h
software/libosmosdr/src/: CMakeLists.txt  Makefile.am  libosmosdr.c  osmo_sdr.c  osmosdr.c
utils/: check_ctr.c  e4000_distance.pl  e4000_pl.pl
utils/osmosdr-sweep/: Makefile  portaudio.diff
utils/osmosdr-sweep/src/: main.c  serial.c  serial.h  utils.c  utils.h
utils/rum-ba/: Makefile  build-win32.bat
utils/rum-ba/src/: main.c  osmosdr.c  osmosdr.h  sam3u.c  sam3u.h  serial.c  serial.h  utils.c  utils.h
utils/rum-ba/src/lattice/: hardware.c  hardware.h  slim_pro.c  slim_vme.c
utils/vmelinearize/: Makefile
utils/vmelinearize/src/: hardware.c  hardware.h  main.c  slim_pro.c  slim_vme.c  utils.c  utils.h
(+5 files in other folders)
